# youtube-channel-text-extract

./: .gitignore  LICENSE  Makefile  README.md  download_channel_audio.py  organize_downloads.py  pyproject.toml  requirements.txt  transcribe_audio.py
desktop/: electron-builder.yml  package-lock.json  package.json
desktop/src/main/: index.js
desktop/src/preload/: index.js
desktop/src/renderer/: index.html
desktop/src/renderer/src/: App.jsx  main.jsx
desktop/src/renderer/src/styles/: global.css
src/ytextract/: __init__.py  cli.py  downloader.py  transcriber.py
